--- a/css/cover.css
+++ b/css/cover.css
@@ -41,7 +41,7 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  background-image: url(images/landing_page2.png);
+  background-image: url(../images/landing_page1.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -119,9 +119,10 @@ body {
 .cover .btn-lg {
   padding: 10px 60px;
   font-weight: bold;
-  border: 3px solid #fff;
+  border: 5px solid #fff;
+  font-size: 32px !important;
 }
-.cover .btn-lg:hover {
+.cover .btn-lg:hover, .cover .btn-lg:focus {
   color: #fff;
 }
 .cover-heading {
