added carousel image to home, changed landing page typeface to monoton

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: #3f4149;
 }
+
+/* carousel fullscreen */
+
+
+
+.carousel {
+    position: relative;
+    width: 75%;
+    margin: auto;
+}
