--- a/css/cover.css
+++ b/css/cover.css
@@ -28,6 +28,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  margin: auto;
 }
 body {
   color: #fff;
@@ -173,3 +174,4 @@ body {
     width: 700px;
   }
 }
+
