--- a/css/style.css
+++ b/css/style.css
@@ -15,4 +15,10 @@ body {
 h1 {
     color: aliceblue;
     font-family:'Saira Condensed';
+    font-size: 4vw;
+} 
+h2 {
+    color: aliceblue;
+    font-family:'Saira Condensed';
+    font-size: 2vw;
 } 
