--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@ body {
     margin: auto;
 }
 
+.carousel-inner > .item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 500px;
+}
+
 h1 {
     color: aliceblue;
     font-family:'Saira Condensed';
