--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,26 @@ body {
 
 
 
-.carousel {
+/*.carousel {
     position: relative;
     width: 100%;
     margin: auto;
+}*/
+
+/* Carousel base class */
+.carousel {
+  height: 500px;
+  margin-bottom: 60px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
 }
 
 .carousel-inner > .item > img {
